--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -213,6 +213,9 @@
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
       </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
@@ -294,11 +297,17 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
       <property name="showDropIndicator" stdset="0">
        <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
@@ -412,17 +421,23 @@
         <x>10</x>
         <y>292</y>
         <width>441</width>
-        <height>211</height>
+        <height>271</height>
        </rect>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
      </widget>
      <widget class="QLabel" name="SearchForLabel">
       <property name="geometry">
        <rect>
-        <x>12</x>
+        <x>13</x>
         <y>271</y>
         <width>81</width>
         <height>16</height>
@@ -445,13 +460,16 @@
       <property name="geometry">
        <rect>
         <x>470</x>
-        <y>291</y>
+        <y>292</y>
         <width>531</width>
-        <height>211</height>
+        <height>271</height>
        </rect>
       </property>
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
       </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
@@ -461,6 +479,9 @@
       </property>
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
@@ -653,6 +674,9 @@
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
@@ -916,6 +940,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -924,6 +951,9 @@
       </property>
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::SingleSelection</enum>
@@ -948,6 +978,12 @@
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>15</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>15</number>
       </attribute>
       <column>
        <property name="text">
@@ -1012,6 +1048,9 @@
       <property name="cursor" stdset="0">
        <cursorShape>PointingHandCursor</cursorShape>
       </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
       </property>
@@ -1020,6 +1059,9 @@
       </property>
       <property name="dragDropOverwriteMode">
        <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
       </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
@@ -1038,6 +1080,12 @@
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>15</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>15</number>
       </attribute>
       <column>
        <property name="text">
