--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -44,7 +44,7 @@
       <x>4</x>
       <y>30</y>
       <width>1015</width>
-      <height>641</height>
+      <height>631</height>
      </rect>
     </property>
     <property name="cursor">
@@ -293,7 +293,7 @@
       <property name="geometry">
        <rect>
         <x>13</x>
-        <y>254</y>
+        <y>251</y>
         <width>111</width>
         <height>16</height>
        </rect>
@@ -315,7 +315,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>292</y>
+        <y>289</y>
         <width>441</width>
         <height>311</height>
        </rect>
@@ -334,7 +334,7 @@
       <property name="geometry">
        <rect>
         <x>13</x>
-        <y>271</y>
+        <y>268</y>
         <width>81</width>
         <height>16</height>
        </rect>
@@ -356,7 +356,7 @@
       <property name="geometry">
        <rect>
         <x>470</x>
-        <y>292</y>
+        <y>289</y>
         <width>531</width>
         <height>311</height>
        </rect>
@@ -436,7 +436,7 @@
       <property name="geometry">
        <rect>
         <x>473</x>
-        <y>272</y>
+        <y>269</y>
         <width>51</width>
         <height>16</height>
        </rect>
@@ -458,7 +458,7 @@
       <property name="geometry">
        <rect>
         <x>95</x>
-        <y>270</y>
+        <y>267</y>
         <width>80</width>
         <height>20</height>
        </rect>
@@ -486,7 +486,7 @@
       <property name="geometry">
        <rect>
         <x>175</x>
-        <y>270</y>
+        <y>267</y>
         <width>113</width>
         <height>20</height>
        </rect>
@@ -499,7 +499,7 @@
       <property name="geometry">
        <rect>
         <x>524</x>
-        <y>270</y>
+        <y>267</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -599,10 +599,10 @@
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderShowSortIndicator" stdset="0">
        <bool>true</bool>
@@ -749,10 +749,10 @@
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderShowSortIndicator" stdset="0">
        <bool>true</bool>
@@ -876,10 +876,10 @@
        <bool>false</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <column>
        <property name="text">
@@ -978,10 +978,10 @@
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>15</number>
+       <number>20</number>
       </attribute>
       <column>
        <property name="text">
@@ -1043,6 +1043,42 @@
         <height>591</height>
        </rect>
       </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>20</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>20</number>
+      </attribute>
      </widget>
     </widget>
     <widget class="QWidget" name="database">
@@ -1198,8 +1234,8 @@
    <widget class="QLabel" name="action_update">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>671</y>
+      <x>6</x>
+      <y>667</y>
       <width>101</width>
       <height>16</height>
      </rect>
