--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -31,6 +31,12 @@
     <height>686</height>
    </size>
   </property>
+  <property name="baseSize">
+   <size>
+    <width>1024</width>
+    <height>686</height>
+   </size>
+  </property>
   <property name="cursor">
    <cursorShape>PointingHandCursor</cursorShape>
   </property>
@@ -510,115 +516,6 @@
        <number>-1</number>
       </property>
      </widget>
-     <widget class="QTableWidget" name="ATCtableWidget">
-      <property name="geometry">
-       <rect>
-        <x>8</x>
-        <y>30</y>
-        <width>991</width>
-        <height>161</height>
-       </rect>
-      </property>
-      <property name="cursor" stdset="0">
-       <cursorShape>PointingHandCursor</cursorShape>
-      </property>
-      <property name="autoFillBackground">
-       <bool>true</bool>
-      </property>
-      <property name="autoScrollMargin">
-       <number>16</number>
-      </property>
-      <property name="tabKeyNavigation">
-       <bool>false</bool>
-      </property>
-      <property name="showDropIndicator" stdset="0">
-       <bool>false</bool>
-      </property>
-      <property name="dragDropOverwriteMode">
-       <bool>false</bool>
-      </property>
-      <property name="alternatingRowColors">
-       <bool>true</bool>
-      </property>
-      <property name="selectionMode">
-       <enum>QAbstractItemView::NoSelection</enum>
-      </property>
-      <property name="selectionBehavior">
-       <enum>QAbstractItemView::SelectRows</enum>
-      </property>
-      <property name="showGrid">
-       <bool>true</bool>
-      </property>
-      <property name="gridStyle">
-       <enum>Qt::DotLine</enum>
-      </property>
-      <property name="sortingEnabled">
-       <bool>true</bool>
-      </property>
-      <property name="wordWrap">
-       <bool>false</bool>
-      </property>
-      <property name="rowCount">
-       <number>0</number>
-      </property>
-      <property name="columnCount">
-       <number>6</number>
-      </property>
-      <attribute name="horizontalHeaderVisible">
-       <bool>false</bool>
-      </attribute>
-      <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>100</number>
-      </attribute>
-      <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>100</number>
-      </attribute>
-      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
-      </attribute>
-      <attribute name="horizontalHeaderStretchLastSection">
-       <bool>true</bool>
-      </attribute>
-      <attribute name="verticalHeaderDefaultSectionSize">
-       <number>20</number>
-      </attribute>
-      <attribute name="verticalHeaderMinimumSectionSize">
-       <number>20</number>
-      </attribute>
-      <attribute name="verticalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
-      </attribute>
-      <column>
-       <property name="text">
-        <string>VID</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Country</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Facility</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Frequency</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Category</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Controller</string>
-       </property>
-      </column>
-     </widget>
      <widget class="QLabel" name="atc_label">
       <property name="geometry">
        <rect>
@@ -663,13 +560,29 @@
        <string>PILOT List</string>
       </property>
      </widget>
-     <widget class="QTableWidget" name="PilottableWidget">
+     <widget class="QLabel" name="flagIcon">
       <property name="geometry">
        <rect>
-        <x>8</x>
-        <y>210</y>
+        <x>230</x>
+        <y>5</y>
+        <width>71</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="cursor">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QTableWidget" name="ATCtableWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
         <width>991</width>
-        <height>401</height>
+        <height>161</height>
        </rect>
       </property>
       <property name="cursor" stdset="0">
@@ -677,9 +590,6 @@
       </property>
       <property name="autoFillBackground">
        <bool>true</bool>
-      </property>
-      <property name="autoScrollMargin">
-       <number>16</number>
       </property>
       <property name="tabKeyNavigation">
        <bool>false</bool>
@@ -699,29 +609,23 @@
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
-      <property name="showGrid">
-       <bool>true</bool>
-      </property>
       <property name="gridStyle">
        <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
       </property>
       <property name="wordWrap">
        <bool>false</bool>
       </property>
-      <property name="rowCount">
-       <number>0</number>
-      </property>
-      <property name="columnCount">
-       <number>9</number>
-      </property>
-      <attribute name="horizontalHeaderVisible">
-       <bool>false</bool>
-      </attribute>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>109</number>
+       <number>110</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>109</number>
+       <number>110</number>
       </attribute>
       <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
        <bool>false</bool>
@@ -735,12 +639,14 @@
       <attribute name="verticalHeaderMinimumSectionSize">
        <number>20</number>
       </attribute>
-      <attribute name="verticalHeaderShowSortIndicator" stdset="0">
-       <bool>true</bool>
-      </attribute>
       <column>
        <property name="text">
-        <string>VID</string>
+        <string>CallSign</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Frequency</string>
        </property>
       </column>
       <column>
@@ -750,7 +656,99 @@
       </column>
       <column>
        <property name="text">
-        <string>Captain</string>
+        <string>Controller</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Position</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Rating</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Award</string>
+       </property>
+      </column>
+     </widget>
+     <widget class="QTableWidget" name="PilottableWidget">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>210</y>
+        <width>991</width>
+        <height>381</height>
+       </rect>
+      </property>
+      <property name="cursor" stdset="0">
+       <cursorShape>PointingHandCursor</cursorShape>
+      </property>
+      <property name="autoFillBackground">
+       <bool>true</bool>
+      </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
+      <property name="alternatingRowColors">
+       <bool>true</bool>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::NoSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+      <property name="textElideMode">
+       <enum>Qt::ElideMiddle</enum>
+      </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>95</number>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>95</number>
+      </attribute>
+      <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderStretchLastSection">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>20</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>20</number>
+      </attribute>
+      <column>
+       <property name="text">
+        <string>Airline</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>CallSign</string>
        </property>
       </column>
       <column>
@@ -760,7 +758,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Rating</string>
+        <string>Captain</string>
        </property>
       </column>
       <column>
@@ -775,6 +773,16 @@
       </column>
       <column>
        <property name="text">
+        <string>Award</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Rating</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
         <string>Status</string>
        </property>
       </column>
@@ -783,22 +791,6 @@
         <string>Time</string>
        </property>
       </column>
-     </widget>
-     <widget class="QLabel" name="flagIcon">
-      <property name="geometry">
-       <rect>
-        <x>230</x>
-        <y>5</y>
-        <width>71</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="cursor">
-       <cursorShape>PointingHandCursor</cursorShape>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
      </widget>
     </widget>
     <widget class="QWidget" name="controllers">
@@ -1014,7 +1006,7 @@
      <attribute name="title">
       <string>Observers</string>
      </attribute>
-     <widget class="QTableView" name="ObservertableView">
+     <widget class="QTableWidget" name="ObservertableWidget">
       <property name="geometry">
        <rect>
         <x>5</x>
@@ -1039,7 +1031,7 @@
        <bool>true</bool>
       </property>
       <property name="selectionMode">
-       <enum>QAbstractItemView::SingleSelection</enum>
+       <enum>QAbstractItemView::NoSelection</enum>
       </property>
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
@@ -1053,6 +1045,15 @@
       <property name="wordWrap">
        <bool>false</bool>
       </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>80</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>80</number>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
        <number>20</number>
       </attribute>
