--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -840,19 +840,19 @@
        <bool>false</bool>
       </property>
       <attribute name="horizontalHeaderDefaultSectionSize">
-       <number>110</number>
+       <number>105</number>
       </attribute>
       <attribute name="horizontalHeaderMinimumSectionSize">
-       <number>110</number>
+       <number>105</number>
       </attribute>
       <attribute name="horizontalHeaderStretchLastSection">
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>20</number>
+       <number>25</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>20</number>
+       <number>25</number>
       </attribute>
       <column>
        <property name="text">
@@ -862,6 +862,16 @@
       <column>
        <property name="text">
         <string>Frequency</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Country</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Position</string>
        </property>
       </column>
       <column>
@@ -876,12 +886,7 @@
       </column>
       <column>
        <property name="text">
-        <string>Position</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Country</string>
+        <string/>
        </property>
       </column>
       <column>
@@ -950,10 +955,10 @@
        <bool>true</bool>
       </attribute>
       <attribute name="verticalHeaderDefaultSectionSize">
-       <number>20</number>
+       <number>25</number>
       </attribute>
       <attribute name="verticalHeaderMinimumSectionSize">
-       <number>20</number>
+       <number>25</number>
       </attribute>
       <column>
        <property name="text">
@@ -978,6 +983,11 @@
       <column>
        <property name="text">
         <string>Rating</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string/>
        </property>
       </column>
       <column>
