--- a/QtUI/MainWindow_UI.ui
+++ b/QtUI/MainWindow_UI.ui
@@ -310,17 +310,47 @@
       <property name="autoFillBackground">
        <bool>true</bool>
       </property>
+      <property name="tabKeyNavigation">
+       <bool>false</bool>
+      </property>
+      <property name="showDropIndicator" stdset="0">
+       <bool>false</bool>
+      </property>
+      <property name="dragDropOverwriteMode">
+       <bool>false</bool>
+      </property>
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
       <property name="selectionMode">
        <enum>QAbstractItemView::NoSelection</enum>
       </property>
+      <property name="gridStyle">
+       <enum>Qt::DotLine</enum>
+      </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
+      <property name="wordWrap">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderDefaultSectionSize">
+       <number>25</number>
+      </attribute>
+      <attribute name="horizontalHeaderMinimumSectionSize">
+       <number>25</number>
+      </attribute>
+      <attribute name="verticalHeaderDefaultSectionSize">
+       <number>20</number>
+      </attribute>
+      <attribute name="verticalHeaderMinimumSectionSize">
+       <number>20</number>
+      </attribute>
      </widget>
      <widget class="QLabel" name="SearchForLabel">
       <property name="geometry">
        <rect>
-        <x>13</x>
+        <x>14</x>
         <y>241</y>
         <width>81</width>
         <height>16</height>
@@ -445,9 +475,9 @@
       <property name="geometry">
        <rect>
         <x>95</x>
-        <y>239</y>
+        <y>237</y>
         <width>80</width>
-        <height>22</height>
+        <height>24</height>
        </rect>
       </property>
       <property name="cursor">
@@ -473,9 +503,9 @@
       <property name="geometry">
        <rect>
         <x>175</x>
-        <y>238</y>
+        <y>237</y>
         <width>113</width>
-        <height>20</height>
+        <height>22</height>
        </rect>
       </property>
       <property name="cursor">
